<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="adapterEnProgreso"
            type="uy.carga.ViajeAdapter" />
        <variable
            name="adapterHoy"
            type="uy.carga.ViajeAdapter" />
        <variable
            name="adapterProximos"
            type="uy.carga.ViajeAdapter" />
        <variable
            name="adapterFinalizados"
            type="uy.carga.ViajeAdapter" />
        <variable
            name="adapterCancelados"
            type="uy.carga.ViajeAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/inicio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.InicioFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/msgBienvenida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/welcome"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/txtViajesEnProgreso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/viajesEnProgreso"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerEnProgreso"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adapter="@{adapterEnProgreso}" />

                <TextView
                    android:id="@+id/txtViajesHoy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/viajeHoy"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerHoy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adapter="@{adapterHoy}" />

                <TextView
                    android:id="@+id/txtViajesProximos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/viajesProximos"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerProximos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adapter="@{adapterProximos}" />

                <TextView
                    android:id="@+id/txtViajesFinalizados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/viajeFinalizado"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerFinalizados"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adapter="@{adapterFinalizados}" />

                <TextView
                    android:id="@+id/txtViajesCancelados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/viajesCancelados"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCancelados"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adapter="@{adapterCancelados}" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>