<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViajeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarViaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/viaje"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fecha"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/varFecha"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/estado"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/varEstado"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/empresa_transportista"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/varEmpresa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rubro_del_cliente"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/varRubro"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/volumen_de_carga"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/varVolumen"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/vehiculo"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/varVehiculo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/origen"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/varOrigen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <ImageButton
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:backgroundTint="#00FFFFFF"
                            android:clickable="true"
                            android:contentDescription="@string/BuscarOrigen"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:onClick="onOrigenClick"
                            app:srcCompat="?android:attr/actionModeWebSearchDrawable" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/destino"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/varDestino"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <ImageButton
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:backgroundTint="#00FFFFFF"
                            android:clickable="true"
                            android:contentDescription="@string/buscar_destino_en_el_mapa"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:onClick="onDestinoClick"
                            app:srcCompat="?android:attr/actionModeWebSearchDrawable" />
                    </LinearLayout>

                </TableRow>
            </TableLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <org.osmdroid.views.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="4:3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >

                </org.osmdroid.views.MapView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/buttonViaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/light_blue_900"
                android:onClick="onViajeClick"
                android:text="@string/iniciar_viaje"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>